opam-version: "2.0"
name: "mltt"
version: "0.0"
maintainer: "danny.gratzer@gmail.com"
authors: ["Daniel Gratzer"]
homepage: "https://github.com/jozefg/nbe-for-mltt"
bug-reports: "https://github.com/jozefg/nbe-for-mltt/issues"
dev-repo: "git+https://github.com/jozefg/nbe-for-mltt.git"
license: "MIT"
depends: [
  "dune"  {build}
  "cmdliner" {= "1.0.2"}
  "sexplib" {>= "0.11.0"}
]
build: [
  [make]
]
