opam-version: "2.0"
name: "mltt"
version: "0.0"
synopsis: "An implementation of Martin-Lof type theory"
maintainer: "danny.gratzer@gmail.com"
authors: ["Daniel Gratzer"]
homepage: "https://github.com/jozefg/nbe-for-mltt"
bug-reports: "https://github.com/jozefg/nbe-for-mltt/issues"
dev-repo: "git+https://github.com/jozefg/nbe-for-mltt.git"
license: "MIT"
depends: [
  "dune"  {build}
  "cmdliner" {>= "1.3"}
  "sexplib" {>= "0.16.0"}
]
build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]
