opam-version: "2.0"
name: "normalize_lib"
version: "0.0"
maintainer: "Daniel Gratzer"
authors: ["Daniel Gratzer"]
synopsis: "An implementation of Martin-Lof type theory"
homepage: "https://github.com/jozefg/nbe-for-mltt"
bug-reports: "https://github.com/jozefg/nbe-for-mltt/issues"
license: "MIT"
dev-repo: "git+https://github.com/jozefg/nbe-for-mltt"
build: [
  ["dune" "build" "--only-packages" name
   "--root" "." "-j" jobs "@install"]
]
depends: [
  "dune"  {build}
  "menhir" {>= "20180703"}
  "sexplib" {>= "0.11.0"}
]
